--- a/三阶段项目.md
+++ b/三阶段项目.md
@@ -1,9 +1,15 @@
 # Node 项目
 
+> 管理系统(商品上架信息，商品价格，数量，评论，商品图片)
+
+- [参考页面](https://ant-design-pro.netlify.com)
+
+- 新闻管理系统，商城管理系统，医疗管理系统，学生管理系统，汽车销售管理系统，OA管理系统
+
 - express(路由，中间件，API接口)(koa，egg.js)
 - mongoDB(增删查改)
 - jquery(zepto)
-- bootstrap(其它UI也可以)
+- bootstrap(其它UI也可以)/Ant-design 
 - 上传功能，下载
 - ES6(箭头函数，async和await配合promise，解构)
 - websocket(实时聊天)
@@ -11,5 +17,9 @@
 - 桌面应用化(Docker技术)
 - Echarts(数据可视化)
 - 模块化(require,module.exports)
-- Git代码管理工具
+- Git代码管理工具(github)
 - 云服务发布(阿里云)
+
+管理系统面向公司内部，注重功能，页面效果可以弱化
+
+2~3人开发
